--- a/qtTest/mainwindow.ui
+++ b/qtTest/mainwindow.ui
@@ -256,6 +256,58 @@
        <string>Show player movements</string>
       </property>
      </widget>
+     <widget class="QPushButton" name="command_menu">
+      <property name="geometry">
+       <rect>
+        <x>1160</x>
+        <y>460</y>
+        <width>200</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>1160</x>
+        <y>420</y>
+        <width>200</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>AI Commands:</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="send_command">
+      <property name="geometry">
+       <rect>
+        <x>1260</x>
+        <y>500</y>
+        <width>100</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Send</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="stop_resume">
+      <property name="geometry">
+       <rect>
+        <x>1200</x>
+        <y>640</y>
+        <width>100</width>
+        <height>60</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Force Stop</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="vision_settings">
      <attribute name="title">
