tags menu and searched region working

--- a/SMMCGUI/forms/mainwindow.ui
+++ b/SMMCGUI/forms/mainwindow.ui
@@ -538,6 +538,12 @@
         <height>27</height>
        </rect>
       </property>
+      <property name="layoutDirection">
+       <enum>Qt::RightToLeft</enum>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
      </widget>
      <widget class="QLineEdit" name="ulc_y">
       <property name="geometry">
@@ -547,6 +553,12 @@
         <width>100</width>
         <height>27</height>
        </rect>
+      </property>
+      <property name="layoutDirection">
+       <enum>Qt::RightToLeft</enum>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
       </property>
      </widget>
      <widget class="QLabel" name="ulc_x_label">
@@ -606,6 +618,12 @@
         <height>27</height>
        </rect>
       </property>
+      <property name="layoutDirection">
+       <enum>Qt::RightToLeft</enum>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
      </widget>
      <widget class="QLabel" name="lrc_x_label">
       <property name="geometry">
@@ -631,6 +649,12 @@
         <width>100</width>
         <height>27</height>
        </rect>
+      </property>
+      <property name="layoutDirection">
+       <enum>Qt::RightToLeft</enum>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
       </property>
      </widget>
      <widget class="QLabel" name="lrc_y_label">
